--- a/LadyinPrideandPrejudice.html
+++ b/LadyinPrideandPrejudice.html
@@ -35,7 +35,7 @@
             <div class="flex flex-col md:flex-row items-center md:items-start gap-6">
                 <div class="flex-shrink-0 w-full md:w-1/3">
                     <!-- 请将此处的占位图替换为伊丽莎白·贝内特的真实照片链接 -->
-                    <img src="https://placehold.co/400x400/9ca3af/ffffff?text=Elizabeth+Bennet%0A(Keira+Knightley)" alt="伊丽莎白·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="ElizabethBennet(KeiraKnightley).jpeg" alt="伊丽莎白·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">
@@ -56,7 +56,7 @@
             <div class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6">
                 <div class="flex-shrink-0 w-full md:w-1/3">
                     <!-- 请将此处的占位图替换为简·贝内特的真实照片链接 -->
-                    <img src="https://placehold.co/400x400/9ca3af/ffffff?text=Jane+Bennet%0A(Rosamund+Pike)" alt="简·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="Jane Bennet (Rosamund Pike).jpeg" alt="简·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">
@@ -77,7 +77,7 @@
             <div class="flex flex-col md:flex-row items-center md:items-start gap-6">
                 <div class="flex-shrink-0 w-full md:w-1/3">
                     <!-- 请将此处的占位图替换为莉迪亚·贝内特的真实照片链接 -->
-                    <img src="https://placehold.co/400x400/9ca3af/ffffff?text=Lydia+Bennet%0A(Jena+Malone)" alt="莉迪亚·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="Lydia Bennet (Jena Malone).jpeg" alt="莉迪亚·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">
@@ -98,7 +98,7 @@
             <div class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6">
                 <div class="flex-shrink-0 w-full md:w-1/3">
                     <!-- 请将此处的占位图替换为玛丽·贝内特的真实照片链接 -->
-                    <img src="https://placehold.co/400x400/9ca3af/ffffff?text=Mary+Bennet%0A(Talulah+Riley)" alt="玛丽·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="Mary Bennet (Talulah Riley).jpeg" alt="玛丽·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">
@@ -119,7 +119,7 @@
             <div class="flex flex-col md:flex-row items-center md:items-start gap-6">
                 <div class="flex-shrink-0 w-full md:w-1/3">
                     <!-- 请将此处的占位图替换为凯蒂·贝内特的真实照片链接 -->
-                    <img src="https://placehold.co/400x400/9ca3af/ffffff?text=Kitty+Bennet%0A(Carey+Mulligan)" alt="凯蒂·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="Kitty Bennet (Carey Mulligan).jpeg" alt="凯蒂·贝内特画像" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">
@@ -140,7 +140,7 @@
             <div class="flex flex-col md:flex-row-reverse items-center md:items-start gap-6">
                 <div class="flex-shrink-0 w-full md:w-1/3">
                     <!-- 请将此处的占位图替换为夏洛特·卢卡斯的真实照片链接 -->
-                    <img src="https://placehold.co/400x400/9ca3af/ffffff?text=Charlotte+Lucas%0A(Claudie+Blakley)" alt="夏洛特·卢卡斯画像" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="Charlotte Lucas (Claudie Blakley).jpg" alt="夏洛特·卢卡斯画像" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">
